HelloUltraviolet/Fixtures/RejectedSource/Procedures/ContractEntrySideEffect/Expected.uv
//! Expected diagnostic metadata for the ContractEntrySideEffect rejected-source specimen.

expectedDiagnostic("E-CON-0416", "diag-table.15.ProcedureContractEntryDiagnostics")
